--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Theo Greenly — Alaska Desk Reporter</title>
-  <meta name="description" content="Theo Greenly reports from Alaska's Aleutian–Pribilof region. Selected work, links, photos, and contact." />
+  <meta name="description" content="Theo Greenly reports from Alaska's Aleutian–Pribilof region. Selected work, links, about, and contact." />
   <meta property="og:title" content="Theo Greenly — Alaska Desk Reporter" />
   <meta property="og:description" content="Reporting from the Aleutian–Pribilof region." />
   <meta property="og:image" content="/assets/images/og-image.jpg" />
@@ -21,7 +21,6 @@
       </a>
       <nav class="nav">
         <a href="#work">work</a>
-        <a href="#photos">photos</a>
         <a href="#links">links</a>
         <a href="#about">about</a>
         <a href="#contact">contact</a>
